--- a/agent-plugins/agent-plugins-jedis/pom.xml
+++ b/agent-plugins/agent-plugins-jedis/pom.xml
@@ -3,13 +3,23 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>plugins</artifactId>
+        <artifactId>agent-plugins</artifactId>
         <groupId>com.duo.examples</groupId>
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>http-client-plugin</artifactId>
+    <artifactId>agent-plugins-jedis</artifactId>
 
+    <properties>
+        <jedis.version>3.0.1</jedis.version>
+    </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${jedis.version}</version>
+        </dependency>
+    </dependencies>
 </project>
